<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Recipes</string>
    <string name="recipes_book">Recipes Book</string>
    <string name="font_normal">sans-serif</string>
    <string name="submit_button">Done</string>
    <string name="search_text">Search recipes</string>
    <string name="sign_in_by_google">Sign In by Google</string>
    <string name="get_back">Get Back</string>
    <string name="welcome_to_recipes_book">Welcome to Recipes Book</string>
    <string name="salads_text">Salads</string>
    <string name="soups_text">Soups</string>
    <string name="dessert_text">Desserts</string>
    <string name="image">Image</string>
    <string name="form_submit">Done</string>

    <!--    font sizes    -->
    <string name="font_size_thin">10sp</string>
    <string name="font_size_normal">14sp</string>
    <string name="font_size_medium">16sp</string>
    <string name="font_size_big">18sp</string>
    <string name="font_size_bold">20sp</string>
    <string name="name_text">Name</string>
    <string name="email_text">Email</string>
    <string name="email_example">josh@email.com</string>
    <string name="josh_example">Josh</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">•••••••</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="google_sign_in">Log in by Google</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be > 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="add_new_recipe">Add new recipe</string>
    <string name="user_profile_title">Profile</string>
    <string name="title_text">Title</string>
    <string name="user_name_text">Name</string>
    <string name="user_pass_text">Password</string>
    <string name="user_name_text_ex">Josh</string>
    <string name="user_email_text_ex">josh.cooker@gmail.com</string>
    <string name="title_text_ex">Rice Soup</string>
    <string name="description_text">Description</string>
    <string name="description_text_ex">First of all, take the rice and wash it until …</string>
    <string name="cancel_text" tools:ignore="ButtonCase">Cancel</string>
    <string name="steps_amount">Steps amount</string>
    <string name="ingredients_text">Ingredients (separate by commas)</string>
    <string name="ingredients_text_ex">5 tomatoes, 3 onions or garlics, oil, ....</string>
    <string name="duration_text">Duration (min). Enter «90» for ‹1h 30min›</string>
    <string name="duration_text_ex">120</string>
    <string name="recipes_book_title">Recipe`s Book</string>
    <string name="continue_like_guest">Continue like guest</string>
    <string name="authorization">Authorization</string>
    <string name="description">Description</string>
    <string name="title_activity_refe">refe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="sign_out">Sign out</string>

    <string name="server_client_id">192537204330-vedegos5oei85gmautfjk1sugboa7fkt.apps.googleusercontent.com</string>
    <string name="change_account">Change Account</string>
    <string name="no_signed_in">You do not have signed in yet. Please sign in.</string>
    <string name="cook_later">Cook Later</string>
    <string name="choose_tag">Choose tag</string>
    <string name="fastfood_text">FastFood</string>
    <string name="sauces_text">Sauces</string>
    <string name="dietary_text">Dietary</string>
    <string name="seafood_text">Seafood</string>
    <string name="drinks_text">Drinks</string>
    <string name="authors_text">Authors</string>
    <string name="other_text">Other</string>
    <string name="ingredients_title">Ingredients</string>
    <string name="my_recipes_text">My recipes</string>
    <string name="save">Save</string>
    <string name="delete_text">Delete</string>
    <string name="editing_text">[Editing]</string>
    <string name="cook_later_text">[Cook Later]</string>
    <string name="here_will_be_a_list_of_recipes_added_to_cook_later">Here will be a list of recipes added to \'cook later\'.</string>
    <string name="loading">Loading...</string>

    <string-array name="recipes_array" color="#838383">
        <item color="#838383">Soups</item>
        <item>Desserts</item>
        <item>Salads</item>
        <item>Sauces</item>
        <item>FastFood</item>
        <item>Seafood</item>
        <item>Dietary</item>
        <item>Drinks</item>
        <item>Authors</item>
        <item>Other</item>
    </string-array>

</resources>


