<?xml version="1.0" encoding="utf-8" ?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/theme_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:paddingVertical="15dp"
        tools:context=".AddRecipe">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/user_profile_title"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/inputsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:text="@string/image"
                android:fontFamily="@font/montserrat"
                android:textSize="14sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp">

                <ImageView
                    android:id="@+id/recipeImagePreview"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/ic_food_preview"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/add_new_recipe" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:text="@string/user_name_text"
                android:fontFamily="@font/montserrat"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/recipeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="default"
                android:background="@drawable/border_radius"
                android:backgroundTint="@color/theme_bg_light"
                android:fontFamily="@font/montserrat"
                android:hint="@string/user_name_text_ex"
                android:inputType="text"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:text="@string/prompt_email"
                android:fontFamily="@font/montserrat"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/recipeIngredientsAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="default"
                android:gravity="start"
                android:background="@drawable/border_radius"
                android:backgroundTint="@color/theme_bg_light"
                android:fontFamily="@font/montserrat"
                android:hint="@string/user_email_text_ex"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp"
                android:textSize="16sp" />

        </LinearLayout>

        <Button
            android:id="@+id/button_forgot_pass"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/design_default_color_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:fontFamily="@font/montserrat"
            android:textSize="13sp"
            android:text="@string/reset_pass_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputsList" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="15dp"
            android:text="@string/google_sign_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputsList" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_forgot_pass">

            <Button
                android:id="@+id/button_cancel_activity"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/cancel_text"
                android:textSize="14sp" />

            <Button
                android:id="@+id/submit_add_recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/submit_button"
                android:textSize="14sp" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
